# libgmath

./: .gitignore  Makefile  README.md  meson.build
include/: Vec2.hpp  gmath.hpp
srcs/: Vec2.cpp  gmath.cpp  gmath.hpp  main.cpp
srcs/gmath/: Mat2.hpp  Mat3.hpp  Mat4.hpp  PerlinNoise.hpp  Vec2.hpp  Vec3.hpp  Vec4.hpp  VecMat.hpp  inverse.hpp  linear.hpp  random.cpp  random.hpp  utils.hpp
srcs/vec2/: Vec2i.cpp  Vec2i.hpp
